# shop/internal/server/grpc.go
@@ -1,17 +1,16 @@
 package server
 
 import (
-	v1 "shop/api/helloworld/v1"
-	"shop/internal/conf"
-	"shop/internal/service"
-
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
+	v1 "shop/api/shop/v1"
+	"shop/internal/conf"
+	"shop/internal/service"
 )
 
-// NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+// NewGRPCServer new a gRPC s.
+func NewGRPCServer(c *conf.Server, s *service.ShopService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +26,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterShopServer(srv, s)
 	return srv
 }
